[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/monster/dummy_char.gd" type="Script" id=1]
[ext_resource path="res://characters/health.gd" type="Script" id=2]
[ext_resource path="res://characters/npc/body.png" type="Texture" id=3]
[ext_resource path="res://characters/weapon/weapon-pivot.gd" type="Script" id=4]
[ext_resource path="res://characters/shadow.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]

resource_name = "SETUP"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.32052, -4.20115 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BodyPivot/Body:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shadow:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BodyPivot/Body:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "stagger"
length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.296875, 0.296875, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 30.5911, 26.3305 )

[node name="Character" type="KinematicBody2D" groups=[
"character",
]]

input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Z Index" ]
stagger_knockback = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/SETUP = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/stagger = SubResource( 3 )
blend_times = [  ]

[node name="Tween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Health" type="Node" parent="." index="2"]

script = ExtResource( 2 )
max_health = 9

[node name="PoisonTimer" type="Timer" parent="Health" index="0"]

process_mode = 1
wait_time = 1.4
one_shot = false
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -1, -7.69296 )
shape = SubResource( 4 )

[node name="BodyPivot" type="Position2D" parent="." index="4"]

z_index = 2
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Body" type="Sprite" parent="BodyPivot" index="0"]

texture = ExtResource( 3 )
offset = Vector2( 0.335912, -58.7778 )
_sections_unfolded = [ "Visibility" ]

[node name="WeaponPivot" type="Position2D" parent="." index="5"]

position = Vector2( 0, -40 )
z_index = 2
script = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="WeaponSpawn" type="Position2D" parent="WeaponPivot" index="0"]

position = Vector2( 80, 0 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Shadow" type="Sprite" parent="." index="6"]

self_modulate = Color( 1, 1, 1, 0.313726 )
show_behind_parent = true
position = Vector2( -0.32052, -4.20115 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Visibility" ]


